--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "@mantine/notifications": "5.10.5",
         "@mantine/nprogress": "6.0.0",
         "@tabler/icons": "1.115.0",
+        "advanced-react-timer": "^2.0.3",
         "date-fns": "^2.29.3",
+        "million": "^2.1.2",
         "next": "13.2.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
