--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@tabler/icons": "1.115.0",
         "advanced-react-timer": "^2.0.3",
         "date-fns": "^2.29.3",
+        "firebase": "^10.1.0",
         "next": "13.2.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
